NetBSD Problem Report #44096

From is@beverly.kleinbus.org  Mon Nov 15 17:32:38 2010
Return-Path: <is@beverly.kleinbus.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7FCDB63BAC9
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 15 Nov 2010 17:32:38 +0000 (UTC)
Message-Id: <20101115173230.851C5207E1@beverly.kleinbus.org>
Date: Mon, 15 Nov 2010 18:32:30 +0100 (CET)
From: is@beverly.kleinbus.org
Reply-To: is@beverly.kleinbus.org
To: gnats-bugs@gnats.NetBSD.org
Subject: gcc crashes while compiling gsromfs1.o
X-Send-Pr-Version: 3.95

>Number:         44096
>Category:       toolchain
>Synopsis:       gcc crashes while compiling gsromfs1.o
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    toolchain-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Nov 15 17:35:01 +0000 2010
>Closed-Date:    Tue Nov 16 13:06:10 +0000 2010
>Last-Modified:  Fri Apr 05 03:15:03 +0000 2013
>Originator:     Ignatios Souvatzis
>Release:        NetBSD 5.0.2
>Organization:
seal your e-mail: http://www.gnupg.org/
>Environment:


System: NetBSD marie 5.0.2 NetBSD 5.0.2 (MARIE) #0: Thu Feb 11 19:31:12 CET 2010 ignatios@random85:/var/itch/sources/5.0/os/sys/arch/shark/compile/MARIE shark
Architecture: arm
Machine: shark

_pkg_comp:default.conf#cc -v
Using built-in specs.
Target: arm--netbsdelf
Configured with: /usr/src/tools/gcc/../../gnu/dist/gcc4/configure --enable-long-long --disable-multilib --enable-threads --disable-symvers --build=x86_64-unknown-netbsd4.99.72 --host=arm--netbsdelf --target=arm--netbsdelf --enable-__cxa_atexit
Thread model: posix
gcc version 4.1.3 20080704 prerelease (NetBSD nb2 20081120)



>Description:
	compiling 2010Q3 print/teTeX calls eventually compilation of
	print/ghostscript, which stops with:

cc  -DHAVE_MKSTEMP -DHAVE_HYPOT   -DHAVE_FONTCONFIG -O2  -Ijpeg -DPNG_NO_ASSEMBLER_CODE -I/usr/pkg/include -I/usr/X11R7/include -I/usr/include -I/usr/X11R7/include/freetype2  -Wall -Wstrict-prototypes -Wundef -Wmissing-declarations -Wmissing-prototypes -Wwrite-strings -Wno-strict-aliasing -Wdeclaration-after-statement -fno-builtin -fno-common -DHAVE_STDINT_H -DGX_COLOR_INDEX_TYPE="unsigned long long" -O2 -DA4 -fPIC -I/usr/pkg/include -I/usr/X11R7/include -I/usr/include -I/usr/X11R7/include/freetype2 -DUSE_LIBPAPER  -I./obj/../soobj -I./base  -o ./obj/../soobj/gsromfs1.o -c ./obj/../soobj/gsromfs1.c
gcc: Internal error: Killed (program cc1)
Please submit a full bug report.
See <URL:http://www.NetBSD.org/Misc/send-pr.html> for instructions.
gmake[1]: *** [obj/../soobj/gsromfs1.o] Error 1
gmake[1]: Leaving directory `/pkg_comp/obj/pkgsrc/print/ghostscript/default/ghostscript-8.71'

>How-To-Repeat:
	pkg_comp chroot
	cd print/teTeX
	make
>Fix:

>Release-Note:

>Audit-Trail:
From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: toolchain/44096: gcc crashes while compiling gsromfs1.o
Date: Mon, 15 Nov 2010 21:11:11 +0000

 On Mon, Nov 15, 2010 at 05:35:01PM +0000, is@beverly.kleinbus.org wrote:
  > gcc: Internal error: Killed (program cc1)

 That means signal 9 - are you out of swap?

 -- 
 David A. Holland
 dholland@netbsd.org

From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: toolchain-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: toolchain/44096: gcc crashes while compiling gsromfs1.o
Date: Tue, 16 Nov 2010 10:39:29 +1100

 > cc  -DHAVE_MKSTEMP -DHAVE_HYPOT   -DHAVE_FONTCONFIG -O2  -Ijpeg -DPNG_NO_ASSEMBLER_CODE -I/usr/pkg/include -I/usr/X11R7/include -I/usr/include -I/usr/X11R7/i
 nclude/freetype2  -Wall -Wstrict-prototypes -Wundef -Wmissing-declarations -Wmissing-prototypes -Wwrite-strings -Wno-strict-aliasing -Wdeclaration-after-statem
 ent -fno-builtin -fno-common -DHAVE_STDINT_H -DGX_COLOR_INDEX_TYPE="unsigned long long" -O2 -DA4 -fPIC -I/usr/pkg/include -I/usr/X11R7/include -I/usr/include -
 I/usr/X11R7/include/freetype2 -DUSE_LIBPAPER  -I./obj/../soobj -I./base  -o ./obj/../soobj/gsromfs1.o -c ./obj/../soobj/gsromfs1.c
 > gcc: Internal error: Killed (program cc1)
 > Please submit a full bug report.
 > See <URL:http://www.NetBSD.org/Misc/send-pr.html> for instructions.
 > gmake[1]: *** [obj/../soobj/gsromfs1.o] Error 1
 > gmake[1]: Leaving directory `/pkg_comp/obj/pkgsrc/print/ghostscript/default/ghostscript-8.71'

 what's in dmesg?  can you monitor on another terminal with
 top to see if it runs out of space?


 .mrg.

State-Changed-From-To: open->closed
State-Changed-By: is@NetBSD.org
State-Changed-When: Tue, 16 Nov 2010 13:06:10 +0000
State-Changed-Why:
Submitter confirms his machine was out of swap. "Killed" refers to signal
9, dmesg displayed the full kernel error message.
.


From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44096 CVS commit: src/external/gpl3/gcc/dist/gcc
Date: Tue, 11 Oct 2011 23:05:49 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue Oct 11 23:05:49 UTC 2011

 Modified Files:
 	src/external/gpl3/gcc/dist/gcc: gcc.c

 Log Message:
 Improve the output of gcc when a subprogram gets a signal. When OOMing
 it gets signal 9, which prints "Killed" -- that this is actually
 signal 9 and not a generic message is never clear and causes people to
 file PRs unnecessarily.

 Suggested by followups to PR 44096.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/external/gpl3/gcc/dist/gcc/gcc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44096 CVS commit: src/gnu/dist/gcc4/gcc
Date: Fri, 5 Apr 2013 03:14:46 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Fri Apr  5 03:14:45 UTC 2013

 Modified Files:
 	src/gnu/dist/gcc4/gcc: gcc.c

 Log Message:
 Improve the output of gcc when a subprogram gets a signal. When OOMing
 it gets signal 9, which prints "Killed" -- that this is actually
 signal 9 and not a generic message is never clear and causes people to
 file PRs unnecessarily.

 Suggested by followups to PR 44096.

 I applied this to gcc 4.5 ages ago, but this copy has been sitting
 around in one of my trees for even longer and it may as well get
 committed too.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/gnu/dist/gcc4/gcc/gcc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.