Improve the output of gcc when a subprogram gets a signal. When OOMing it gets signal 9, which prints "Killed" -- that this is actually signal 9 and not a generic message is never clear and causes people to file PRs unnecessarily.

Suggested by followups to PR 44096.